# Amin_Dopingi

./: CMakeLists.txt  main.cpp  reso.qrc
src/view/: backGround.cpp  backGround.h  bodyObject.h  capsule.cpp  capsule.h  continueWindow.cpp  continueWindow.h  controller.cpp  controller.h  decorator.h  flag.cpp  flag.h  game.cpp  game.h  heart.cpp  heart.h  hills.cpp  hills.h  hookihooki.cpp  hookihooki.h  platForm.cpp  platForm.h  player.cpp  player.h  position.h
